--- a/5.html
+++ b/5.html
@@ -46,6 +46,7 @@
         <li><a href="5.html">자기소개, css추가</a></li>
         <li><a href="6.html">나의사진첩</a></li>
         <li><a href="7.html">애니메이션</a></li>
+        <li><a href="8.html">3가지 영역선택후 꾸미기</a></li>
     </ol>
 
     <h2 id="box2_inline">자기소개</h2>
