--- a/7.html
+++ b/7.html
@@ -96,23 +96,39 @@
         <li><a href="5.html">자기소개, css추가</a></li>
         <li><a href="6.html">나의사진첩</a></li>
         <li><a href="7.html">애니메이션</a></li>
+        <li><a href="8.html">3가지 영역선택후 꾸미기</a></li>
     </ol>
 
     <h2>나의 사진첩</h2>
     <div class="container">
-        <img src="img/test img1.jpg" alt="샘플사진1">
-        <img src="img/test img2.jpg" alt="샘플사진2">
-        <img src="img/test img3.jpg" alt="샘플사진3">
-        <img src="img/test img4.jpg" alt="샘플사진4">
-        <img src="img/test img5.jpg" alt="샘플사진5">
-        <img src="img/test img6.jpg" alt="샘플사진6">
-        <img src="img/test img7.jpg" alt="샘플사진7">
+        <div class="img-wrapper">
+            <img src="img/test img1.jpg" alt="샘플사진1">
+        </div>
+        <div class="img-wrapper">
+            <img src="img/test img2.jpg" alt="샘플사진1">
+        </div>
+        <div class="img-wrapper">
+            <img src="img/test img3.jpg" alt="샘플사진1">
+        </div>
+        <div class="img-wrapper">
+            <img src="img/test img4.jpg" alt="샘플사진1">
+        </div>
+        <div class="img-wrapper">
+            <img src="img/test img5.jpg" alt="샘플사진1">
+        </div>
+        <div class="img-wrapper">
+            <img src="img/test img6.jpg" alt="샘플사진1">
+        </div>
+        <div class="img-wrapper">
+            <img src="img/test img7.jpg" alt="샘플사진1">
+        </div>
         <!-- <div class="box">Box 1</div>
         <div class="box">Box 2</div>
         <div class="box">Box 3</div>
         <div class="box">Box 4</div>
         <div class="box">Box 5</div>
         <div class="box">Box 6</div> -->
+
     </div>
     <h2>나의 상품</h2>
     <div class="container">
