8번째 파일 변경완료

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="5.html">자기소개, css추가</a></li>
             <li><a href="6.html">나의사진첩</a></li>
             <li><a href="7.html">애니메이션</a></li>
+            <li><a href="8.html">3가지 영역선택후 꾸미기</a></li>
 
         </ol>
         <div id="article">
